--- a/src/Shop.Common/Shop.Common.csproj
+++ b/src/Shop.Common/Shop.Common.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Database\**" />
+    <EmbeddedResource Remove="Database\**" />
+    <None Remove="Database\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\CustomerMessages.Designer.cs">
       <DependentUpon>CustomerMessages.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -37,10 +43,6 @@
       <LastGenOutput>ProductMessages.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Database\" />
   </ItemGroup>
 
 </Project>
